# ugSFTP2

./: .gitignore  compile-run-info.txt  lib  readme  ugSFTP2  ugSFTP2.pas
HelpTexts/: HelpTexts.pas
sftp-lib-cpp/: CMakeLists.txt  Makefile  UgSFTPClient.cpp  UgSFTPClient.h  UgSFTPClientWrapper.cpp
ugSFTPunit/: ugSFTPunit.pas
